// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extensions API surface > exports a stable set of names from Common 1`] = `
[
  "App",
  "Catalog",
  "Clusters",
  "EventBus",
  "Proxy",
  "Store",
  "Types",
  "Util",
  "logger",
]
`;

exports[`extensions API surface > exports a stable set of names from Main 1`] = `
[
  "Catalog",
  "Ipc",
  "K8s",
  "K8sApi",
  "LensExtension",
  "Navigation",
  "Power",
  "Util",
]
`;

exports[`extensions API surface > exports a stable set of names from Renderer 1`] = `
[
  "Catalog",
  "Component",
  "Ipc",
  "K8s",
  "K8sApi",
  "LensExtension",
  "Navigation",
  "Theme",
  "Util",
]
`;

exports[`extensions API surface > exports a stable set of names from each Common namespace 1`] = `
{
  "App": [
    "Preferences",
    "appName",
    "getEnabledExtensions",
    "isFlatpak",
    "isLinux",
    "isMac",
    "isSnap",
    "isWindows",
    "issuesTrackerUrl",
    "lensBuildEnvironment",
    "version",
  ],
  "Catalog": [
    "CatalogCategory",
    "CatalogEntity",
    "GeneralEntity",
    "KubernetesCluster",
    "WebLink",
    "categoryVersion",
    "kubernetesClusterCategory",
  ],
  "Clusters": [
    "ClusterConnectionStatus",
    "isClusterConnectionStatus",
  ],
  "EventBus": [
    "appEventBus",
  ],
  "Proxy": [
    "resolveSystemProxy",
  ],
  "Store": [
    "ExtensionStore",
  ],
  "Types": [],
  "Util": [
    "HashSet",
    "ObservableHashSet",
    "Ordering",
    "WrappedAbortController",
    "array",
    "backoffCaller",
    "base64",
    "bindPredicate",
    "buildURL",
    "buildURLPositional",
    "byOrderNumber",
    "byValue",
    "bytesToUnits",
    "chainSignal",
    "computedAnd",
    "computedOr",
    "convertKubectlJsonPathToNodeJsonPath",
    "cpuUnitsToNumber",
    "cssNames",
    "cssVar",
    "debouncePromise",
    "delay",
    "displayMode",
    "disposer",
    "formatDuration",
    "formatInTimeZone",
    "formatJSONValue",
    "formatRelativeTime",
    "getAppVersion",
    "getAvailableTimezones",
    "getConvertedParts",
    "getOrInsert",
    "getOrInsertMap",
    "getOrInsertSet",
    "getOrInsertSetFor",
    "getOrInsertWith",
    "getOrInsertWithAsync",
    "guessUserTimezone",
    "hasDefinedTupleValue",
    "hasDefiniteField",
    "hasOptionalTypedProperty",
    "hasOwnProperties",
    "hasOwnProperty",
    "hasStringProperty",
    "hasTypedProperty",
    "includes",
    "interval",
    "isAbortError",
    "isBoolean",
    "isBuffer",
    "isChildProcessError",
    "isDefined",
    "isErrnoException",
    "isExecException",
    "isExecFileException",
    "isFunction",
    "isIso8601DateString",
    "isMiddleClick",
    "isNumber",
    "isObject",
    "isPromiseLike",
    "isPromiseSettledFulfilled",
    "isPromiseSettledRejected",
    "isReactNode",
    "isRecord",
    "isRequestError",
    "isString",
    "isTypedArray",
    "iter",
    "json",
    "listTarEntries",
    "lowerAndPluralize",
    "makeIterableIterator",
    "metricUnitsToNumber",
    "namedCaptures",
    "noop",
    "object",
    "observableCrate",
    "onKeyboardShortcut",
    "onceDefined",
    "openBrowser",
    "openExternal",
    "prevDefault",
    "put",
    "readFileFromTar",
    "readonly",
    "rectifyOrdering",
    "rejectPromiseBy",
    "safeJSONPathValue",
    "setAndGet",
    "setTimeoutFor",
    "sortBySemverVersion",
    "sortCompare",
    "stopPropagation",
    "strictGet",
    "strictSet",
    "toCamelCase",
    "toggle",
    "tuple",
    "unionPATHs",
    "unitsToBytes",
    "urlBuilderFor",
    "waitUntilDefined",
    "withConcurrencyLimit",
  ],
}
`;

exports[`extensions API surface > exports a stable set of names from each Main namespace 1`] = `
{
  "Catalog": [
    "catalogCategories",
    "catalogEntities",
    "getAllClusters",
    "getClusterById",
  ],
  "K8s": [
    "applyOnCluster",
    "deleteOnCluster",
    "getResource",
    "patchOnCluster",
    "queryAllClusters",
    "queryCluster",
    "queryClusters",
  ],
  "K8sApi": [
    "ClusterRole",
    "ClusterRoleBinding",
    "ConfigMap",
    "CronJob",
    "CustomResourceDefinition",
    "DaemonSet",
    "Deployment",
    "DeploymentApi",
    "Endpoint",
    "EndpointSlice",
    "HorizontalPodAutoscaler",
    "Ingress",
    "IngressApi",
    "Job",
    "KubeApi",
    "KubeEvent",
    "KubeJsonApi",
    "KubeObject",
    "KubeObjectStore",
    "KubeStatus",
    "LensExtensionKubeObject",
    "LimitRange",
    "Namespace",
    "NetworkPolicy",
    "Node",
    "NodesApi",
    "PersistentVolume",
    "PersistentVolumeClaim",
    "PersistentVolumeClaimsApi",
    "Pod",
    "PodDisruptionBudget",
    "PodsApi",
    "PriorityClass",
    "ReplicaSet",
    "ResourceQuota",
    "Role",
    "RoleBinding",
    "Secret",
    "Service",
    "ServiceAccount",
    "StatefulSet",
    "StorageClass",
    "apiManager",
    "createKubeObject",
    "createResourceStack",
    "forCluster",
    "getPodsByOwnerId",
    "isJsonApiData",
    "isJsonApiDataList",
    "isKubeJsonApiListMetadata",
    "isKubeJsonApiMetadata",
    "isKubeObjectNonSystem",
    "isKubeStatusData",
    "isPartialJsonApiData",
    "isPartialJsonApiMetadata",
    "stringifyLabels",
  ],
  "Navigation": [
    "navigate",
  ],
  "Power": [
    "onResume",
    "onShutdown",
    "onSuspend",
  ],
  "Util": [
    "HashSet",
    "ObservableHashSet",
    "Ordering",
    "WrappedAbortController",
    "array",
    "backoffCaller",
    "base64",
    "bindPredicate",
    "buildURL",
    "buildURLPositional",
    "byOrderNumber",
    "byValue",
    "bytesToUnits",
    "chainSignal",
    "computedAnd",
    "computedOr",
    "convertKubectlJsonPathToNodeJsonPath",
    "cpuUnitsToNumber",
    "cssNames",
    "cssVar",
    "debouncePromise",
    "delay",
    "displayMode",
    "disposer",
    "fetch",
    "formatDuration",
    "formatInTimeZone",
    "formatJSONValue",
    "formatRelativeTime",
    "getAppVersion",
    "getAvailableTimezones",
    "getConvertedParts",
    "getOrInsert",
    "getOrInsertMap",
    "getOrInsertSet",
    "getOrInsertSetFor",
    "getOrInsertWith",
    "getOrInsertWithAsync",
    "guessUserTimezone",
    "hasDefinedTupleValue",
    "hasDefiniteField",
    "hasOptionalTypedProperty",
    "hasOwnProperties",
    "hasOwnProperty",
    "hasStringProperty",
    "hasTypedProperty",
    "includes",
    "interval",
    "isAbortError",
    "isBoolean",
    "isBuffer",
    "isChildProcessError",
    "isDefined",
    "isErrnoException",
    "isExecException",
    "isExecFileException",
    "isFunction",
    "isIso8601DateString",
    "isMiddleClick",
    "isNumber",
    "isObject",
    "isPromiseLike",
    "isPromiseSettledFulfilled",
    "isPromiseSettledRejected",
    "isReactNode",
    "isRecord",
    "isRequestError",
    "isString",
    "isTypedArray",
    "iter",
    "json",
    "listTarEntries",
    "lowerAndPluralize",
    "makeIterableIterator",
    "metricUnitsToNumber",
    "namedCaptures",
    "noop",
    "object",
    "observableCrate",
    "onKeyboardShortcut",
    "onceDefined",
    "openBrowser",
    "openExternal",
    "prevDefault",
    "put",
    "readFileFromTar",
    "readonly",
    "rectifyOrdering",
    "rejectPromiseBy",
    "safeJSONPathValue",
    "setAndGet",
    "setTimeoutFor",
    "sortBySemverVersion",
    "sortCompare",
    "stopPropagation",
    "strictGet",
    "strictSet",
    "toCamelCase",
    "toggle",
    "tuple",
    "unionPATHs",
    "unitsToBytes",
    "urlBuilderFor",
    "waitUntilDefined",
    "withConcurrencyLimit",
  ],
}
`;

exports[`extensions API surface > exports a stable set of names from each Renderer namespace 1`] = `
{
  "Catalog": [
    "CatalogEntityRegistry",
    "activeCluster",
    "catalogCategories",
    "catalogEntities",
    "getActiveCluster",
    "getAllClusters",
    "getClusterById",
  ],
  "Component": [
    "AddRemoveButtons",
    "Avatar",
    "Badge",
    "BadgeBoolean",
    "BarChart",
    "Button",
    "Chart",
    "ChartKind",
    "Checkbox",
    "CommandOverlay",
    "ConfirmDialog",
    "Countdown",
    "Dialog",
    "Drawer",
    "DrawerItem",
    "DrawerItemLabels",
    "DrawerParamToggler",
    "DrawerTitle",
    "DropFileInput",
    "Dropdown",
    "DurationAbsoluteTimestamp",
    "EditableList",
    "EventDetails",
    "Events",
    "FileInput",
    "FilePicker",
    "FormSwitch",
    "Gutter",
    "HorizontalLine",
    "Icon",
    "Input",
    "InputValidators",
    "ItemListLayout",
    "KubeObjectAge",
    "KubeObjectConditionsDrawer",
    "KubeObjectConditionsList",
    "KubeObjectDetails",
    "KubeObjectListLayout",
    "KubeObjectMenu",
    "KubeObjectMeta",
    "LineProgress",
    "LinkToClusterRole",
    "LinkToConfigMap",
    "LinkToJob",
    "LinkToNamespace",
    "LinkToNode",
    "LinkToObject",
    "LinkToPod",
    "LinkToPriorityClass",
    "LinkToReplicaSet",
    "LinkToRole",
    "LinkToRuntimeClass",
    "LinkToSecret",
    "LinkToServiceAccount",
    "LinkToStorageClass",
    "LocaleDate",
    "MainLayout",
    "Map",
    "MarkdownViewer",
    "MaybeLink",
    "Menu",
    "MenuActions",
    "MenuContext",
    "MenuItem",
    "MonacoEditor",
    "NamespaceSelect",
    "NamespaceSelectBadge",
    "NamespaceSelectBadgeNonInjected",
    "NamespaceSelectFilter",
    "NoItems",
    "NotificationStatus",
    "Notifications",
    "OverLimitStyle",
    "OverSizeLimitStyle",
    "OverTotalSizeLimitStyle",
    "PageLayout",
    "PathPicker",
    "PieChart",
    "PodCharts",
    "PodDetailsList",
    "Radio",
    "RadioGroup",
    "ReactiveDuration",
    "RenderDelay",
    "ResourceMetrics",
    "ResourceMetricsContext",
    "SearchInput",
    "SearchInputUrl",
    "Select",
    "SettingLayout",
    "Slider",
    "Spinner",
    "StatusBrick",
    "Stepper",
    "SubMenu",
    "SubTitle",
    "Switch",
    "Switcher",
    "Tab",
    "TabLayout",
    "Table",
    "TableCell",
    "TableHead",
    "TableRow",
    "Tabs",
    "TerminalStore",
    "TimeRangedResourceMetrics",
    "Tooltip",
    "TooltipPosition",
    "TreeGroup",
    "TreeItem",
    "TreeView",
    "VirtualList",
    "WithTooltip",
    "Wizard",
    "WizardLayout",
    "WizardStep",
    "asyncInputValidator",
    "cpuOptions",
    "createTerminalTab",
    "getBooleanClass",
    "getBooleanText",
    "inputValidator",
    "isAsyncValidator",
    "isSvg",
    "logTabStore",
    "memoryOptions",
    "notificationsStore",
    "onMultiSelectFor",
    "podMetricTabs",
    "resizingAnchorProps",
    "sortConditions",
    "terminalStore",
    "unionInputValidatorsAsync",
    "withTooltip",
  ],
  "K8s": [
    "applyOnCluster",
    "deleteOnCluster",
    "getResource",
    "patchOnCluster",
    "queryAllClusters",
    "queryCluster",
    "queryClusters",
  ],
  "K8sApi": [
    "CRDResourceStore",
    "CRDStore",
    "ClusterRole",
    "ClusterRoleBinding",
    "ClusterRoleBindingStore",
    "ClusterRoleStore",
    "ConfigMap",
    "ConfigMapStore",
    "ConfigMapsStore",
    "CronJob",
    "CronJobStore",
    "CustomResourceDefinition",
    "CustomResourceDefinitionStore",
    "CustomResourceStore",
    "DaemonSet",
    "DaemonSetStore",
    "Deployment",
    "DeploymentApi",
    "DeploymentStore",
    "Endpoint",
    "EndpointSlice",
    "EndpointSliceStore",
    "EndpointStore",
    "EndpointsStore",
    "EventStore",
    "HPAStore",
    "HorizontalPodAutoscaler",
    "HorizontalPodAutoscalerStore",
    "Ingress",
    "IngressApi",
    "IngressClassStore",
    "IngressStore",
    "Job",
    "JobStore",
    "KubeApi",
    "KubeEvent",
    "KubeJsonApi",
    "KubeObject",
    "KubeObjectStatusLevel",
    "KubeObjectStore",
    "KubeStatus",
    "LensExtensionKubeObject",
    "LimitRange",
    "LimitRangeStore",
    "LimitRangesStore",
    "Namespace",
    "NamespaceStore",
    "NetworkPolicy",
    "NetworkPolicyStore",
    "Node",
    "NodeStore",
    "NodesApi",
    "NodesStore",
    "PersistentVolume",
    "PersistentVolumeClaim",
    "PersistentVolumeClaimStore",
    "PersistentVolumeClaimsApi",
    "PersistentVolumeStore",
    "PersistentVolumesStore",
    "Pod",
    "PodDisruptionBudget",
    "PodDisruptionBudgetStore",
    "PodDisruptionBudgetsStore",
    "PodStore",
    "PodsApi",
    "PodsStore",
    "PriorityClass",
    "PriorityClassStore",
    "PriorityClassStoreStore",
    "ReplicaSet",
    "ReplicaSetStore",
    "ResourceQuota",
    "ResourceQuotaStore",
    "ResourceQuotasStore",
    "Role",
    "RoleBinding",
    "RoleBindingStore",
    "RoleBindingsStore",
    "RoleStore",
    "RolesStore",
    "Secret",
    "SecretStore",
    "SecretsStore",
    "Service",
    "ServiceAccount",
    "ServiceAccountStore",
    "ServiceAccountsStore",
    "ServiceStore",
    "StatefulSet",
    "StatefulSetStore",
    "StorageClass",
    "StorageClassStore",
    "VerticalPodAutoscalerStore",
    "VolumeClaimStore",
    "apiManager",
    "clusterRoleApi",
    "clusterRoleBindingApi",
    "clusterRoleBindingStore",
    "clusterRoleStore",
    "configMapApi",
    "configMapStore",
    "crdApi",
    "crdStore",
    "createKubeObject",
    "createResourceStack",
    "cronJobApi",
    "cronJobStore",
    "daemonSetApi",
    "daemonSetStore",
    "deploymentApi",
    "deploymentStore",
    "endpointApi",
    "endpointSliceApi",
    "endpointSliceStore",
    "endpointStore",
    "eventApi",
    "eventStore",
    "forCluster",
    "getPodsByOwnerId",
    "hpaApi",
    "hpaStore",
    "ingressApi",
    "ingressStore",
    "isAllowedResource",
    "isJsonApiData",
    "isJsonApiDataList",
    "isKubeJsonApiListMetadata",
    "isKubeJsonApiMetadata",
    "isKubeObjectNonSystem",
    "isKubeStatusData",
    "isPartialJsonApiData",
    "isPartialJsonApiMetadata",
    "jobApi",
    "jobStore",
    "limitRangeApi",
    "limitRangeStore",
    "namespaceStore",
    "namespacesApi",
    "networkPolicyApi",
    "networkPolicyStore",
    "nodesApi",
    "nodesMetricsApi",
    "nodesStore",
    "pcApi",
    "pcStore",
    "pdbApi",
    "pdbStore",
    "persistentVolumeApi",
    "persistentVolumeStore",
    "podsApi",
    "podsMetricsApi",
    "podsStore",
    "priorityClassApi",
    "pvcApi",
    "pvcStore",
    "replicaSetApi",
    "replicaSetStore",
    "requestMetrics",
    "resourceQuotaApi",
    "resourceQuotaStore",
    "roleApi",
    "roleBindingApi",
    "roleBindingStore",
    "roleStore",
    "secretsApi",
    "secretsStore",
    "serviceAccountsApi",
    "serviceAccountsStore",
    "serviceApi",
    "serviceStore",
    "statefulSetApi",
    "statefulSetStore",
    "storageClassApi",
    "storageClassStore",
    "stringifyLabels",
    "vpaApi",
    "vpaStore",
  ],
  "Navigation": [
    "createPageParam",
    "getDetailsUrl",
    "getMaybeDetailsUrl",
    "hideDetails",
    "hideEntityDetails",
    "isActiveRoute",
    "navigate",
    "showDetails",
    "showEntityDetails",
  ],
  "Theme": [
    "activeTheme",
  ],
  "Util": [
    "HashSet",
    "ObservableHashSet",
    "Ordering",
    "WrappedAbortController",
    "array",
    "backoffCaller",
    "base64",
    "bindPredicate",
    "buildURL",
    "buildURLPositional",
    "byOrderNumber",
    "byValue",
    "bytesToUnits",
    "chainSignal",
    "computedAnd",
    "computedOr",
    "convertKubectlJsonPathToNodeJsonPath",
    "cpuUnitsToNumber",
    "cssNames",
    "cssVar",
    "debouncePromise",
    "delay",
    "displayMode",
    "disposer",
    "fetch",
    "formatDuration",
    "formatInTimeZone",
    "formatJSONValue",
    "formatRelativeTime",
    "getAppVersion",
    "getAvailableTimezones",
    "getConvertedParts",
    "getOrInsert",
    "getOrInsertMap",
    "getOrInsertSet",
    "getOrInsertSetFor",
    "getOrInsertWith",
    "getOrInsertWithAsync",
    "guessUserTimezone",
    "hasDefinedTupleValue",
    "hasDefiniteField",
    "hasOptionalTypedProperty",
    "hasOwnProperties",
    "hasOwnProperty",
    "hasStringProperty",
    "hasTypedProperty",
    "includes",
    "interval",
    "isAbortError",
    "isBoolean",
    "isBuffer",
    "isChildProcessError",
    "isDefined",
    "isErrnoException",
    "isExecException",
    "isExecFileException",
    "isFunction",
    "isIso8601DateString",
    "isMiddleClick",
    "isNumber",
    "isObject",
    "isPromiseLike",
    "isPromiseSettledFulfilled",
    "isPromiseSettledRejected",
    "isReactNode",
    "isRecord",
    "isRequestError",
    "isString",
    "isTypedArray",
    "iter",
    "json",
    "listTarEntries",
    "lowerAndPluralize",
    "makeIterableIterator",
    "metricUnitsToNumber",
    "namedCaptures",
    "noop",
    "object",
    "observableCrate",
    "onKeyboardShortcut",
    "onceDefined",
    "openBrowser",
    "openExternal",
    "prevDefault",
    "put",
    "readFileFromTar",
    "readonly",
    "rectifyOrdering",
    "rejectPromiseBy",
    "safeJSONPathValue",
    "setAndGet",
    "setTimeoutFor",
    "sortBySemverVersion",
    "sortCompare",
    "stopPropagation",
    "strictGet",
    "strictSet",
    "toCamelCase",
    "toggle",
    "tuple",
    "unionPATHs",
    "unitsToBytes",
    "urlBuilderFor",
    "waitUntilDefined",
    "withConcurrencyLimit",
  ],
}
`;
